--- a/tiny-ui/package.json
+++ b/tiny-ui/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.4",
+    "qrcode.react": "^4.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "recharts": "^3.6.0"
